--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="alurastart logo.png" alt="logo da alura start">
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
-        </ul>
+    </header>
+    <h1>Vai ser uma imagem aqui</h1>
+    <ul>
+        <li>Escola</li>
+        <li>Estudante</li>
+    </ul>
     </header>
     
-</body>
-</html>
+    <body>
+    </html>
