--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    </header>
-    <h1>Vai ser uma imagem aqui</h1>
-    <ul>
-        <li>Escola</li>
-        <li>Estudante</li>
-    </ul>
+    <header>
+        <img src="images.png" alt="logo da alura start">
+        <ul>
+            <li>Escola</li>
+            <li>Estudante</li>
+        </ul>
     </header>
     
-    <body>
-    </html>
+</body>
+</html>
